# HelloWorld_CORBA

./: .gitignore  CMakeLists.txt  Hello.idl  Hello_impl.cpp  Hello_impl.h  README.md  client.cpp  main_Hello.cpp  server.cpp  vars.cmake
